RESOLVED FIXED251433
[css-animations] a @keyframes rule using an "inherit" value does not update the resolved value when the parent style changes
https://bugs.webkit.org/show_bug.cgi?id=251433
Summary [css-animations] a @keyframes rule using an "inherit" value does not update t...
Antoine Quint
Reported 2023-01-31 05:55:30 PST
In the case where a @keyframes rule has one of its properties set to "inherit", we need to update the computed keyframes in case an ancestor changes in a way that the inherited value changes.
Attachments
Antoine Quint
Comment 1 2023-01-31 06:00:34 PST
Antoine Quint
Comment 2 2023-01-31 06:05:49 PST
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/38282
EWS
Comment 3 2023-01-31 08:38:25 PST
Committed 259631@main (9f095ff23eaa): <https://commits.webkit.org/259631@main> Reviewed commits have been landed. Closing PR #9379 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2023-01-31 08:39:17 PST
Note You need to log in before you can comment on or make changes to this bug.