Cherry-pick 9f095ff23eaa. rdar://problem/104869399

[css-animations] a @keyframes rule using an "inherit" value does not update the resolved value when the parent style changes
    https://bugs.webkit.org/show_bug.cgi?id=251433

    Reviewed by Antti Koivisto.

    In the case where a @keyframes rule has one of its properties set to "inherit", we need to update
    the computed keyframes in case an ancestor changes in a way that the inherited value changes.

    We already have a mechanism to deal with a similar scenario when the keyframes are provided using
    the Web Animations API where the m_inheritedProperties instance variable keeps track of all CSS
    properties set to "inherit" in keyframes.

    We now pass m_inheritedProperties to Style::Resolver::keyframeStylesForAnimation() to populate it
    when a CSS Animation's keyframes are computed.

    * LayoutTests/imported/w3c/web-platform-tests/css/css-animations/responsive/line-height-expected.txt: Added.
    * LayoutTests/imported/w3c/web-platform-tests/css/css-animations/responsive/line-height.html: Added.
    * Source/WebCore/animation/KeyframeEffect.cpp:
    (WebCore::KeyframeEffect::computeCSSAnimationBlendingKeyframes):
    * Source/WebCore/style/StyleResolver.cpp:
    (WebCore::Style::Resolver::keyframeStylesForAnimation):
    * Source/WebCore/style/StyleResolver.h:

    Canonical link: https://commits.webkit.org/259631@main

Canonical link: https://commits.webkit.org/259548.93@safari-7615-branch